<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_ripple"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@mipmap/flag" />

        <TextView
            android:id="@+id/menu_borrowed"
            style="@style/Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_borrowed" />
    </LinearLayout>

    <View
        style="@style/MenuDivider"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_ripple"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@mipmap/book" />

        <TextView
            android:id="@+id/menu_search"
            style="@style/Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_search" />
    </LinearLayout>

    <View
        style="@style/MenuDivider"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_ripple"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@mipmap/blackbord" />

        <TextView
            android:id="@+id/menu_saved"
            style="@style/Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_saved" />
    </LinearLayout>

    <View
        style="@style/MenuDivider"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_ripple"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@mipmap/award" />

        <TextView
            android:id="@+id/menu_article"
            style="@style/Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_article" />
    </LinearLayout>

    <View
        style="@style/MenuDivider"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_ripple"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@mipmap/certificate" />

        <TextView
            android:id="@+id/menu_robot"
            style="@style/Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_robot" />
    </LinearLayout>

    <View
        style="@style/MenuDivider"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_ripple"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@mipmap/hat" />

        <TextView
            android:id="@+id/menu_logout"
            style="@style/Menu.Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_logout" />

    </LinearLayout>

    <View
        style="@style/MenuDivider"
        android:layout_width="match_parent" />

</LinearLayout>